# OlioOhjelmointiTehtavienPalautukset2026

./: .gitignore  README.md
Week1/OlioOhjelmointiLuento1/: CMakeLists.txt  main.cpp
Week2/OlioOhjelmointiLuento2/: CMakeLists.txt  lcd.cpp  lcd.h  main.cpp  mittari.cpp  mittari.h  random.cpp  random.h
Week2/Tuntiesimerkki/: CMakeLists.txt  dht.cpp  dht.h  main.cpp
Week2/Viikkotehtava2/: CMakeLists.txt  game.cpp  game.h  main.cpp
Week3/Tuntiesimerkki/: CMakeLists.txt  father.cpp  father.h  main.cpp  son.cpp  son.h
Week3/Viikkotehtava3/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
Week4/Viikkotehtava4/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
Week5/Viikkotehtava5/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
Week6/EsimerkkitehtavaViikko6/: CMakeLists.txt  main.cpp  student.h
Week6/Viikkotehtava6/: CMakeLists.txt  main.cpp  student.cpp  student.h
Week7/EsimerkkitehtavaViikko7Widget/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Week7/Viikkotehtava7/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Week8/Viikkotehtava8/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
